5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1643_2443.log
== TEST (2019-04-13 23:29:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = float(input("digite numero: "))
ar = 4*pi*(raio**3)/3
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(combustivel, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:30:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = float(input("digite numero: "))
ar = 4*pi*(raio**3)/3
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(combustivel-ar, 4))
-- OUTPUT:
-170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:31:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = float(input("digite numero: "))
ar = 4*pi*(raio**3)/3
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(combustivel + ar, 4))
-- OUTPUT:
188.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:32:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = float(input("digite numero: "))
ar = (4*pi*(raio**3))/3
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(combustivel + ar, 4))
-- OUTPUT:
188.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:33:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = float(input("digite numero: "))
ar = (4*pi*(raio**3))/3
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(ar-combustivel, 4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:28:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = float(input("digite numero: "))
ar = (4*pi*(raio**3))/3
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(ar-combustivel, 4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:32:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
if

ar = (4*pi*(raio**3))/3
else:
combustivel = (pi*(altura**2)*(3*raio-altura))/3
print(round(ar-combustivel, 4))
-- EXECUTION TIME:
0.227913
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 8
    if
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:36:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
if(numero ==1):
	mensagem = (4*pi*(raio**3))/3
else:
	mensagem = (pi*(altura**2)*(3*raio-altura))/3
print(round(mensagem, 4)
-- ERROR:
File "XXXX", line 13
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:36:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
if(numero ==1):
	mensagem = (4*pi*(raio**3))/3
else:
	mensagem = (pi*(altura**2)*(3*raio-altura))/3
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:40:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
if(numero ==1):
	mensagem = (4*pi*(raio**3))/3
else:
	mensagem = (pi*(altura**2)*(3*raio-altura))/3
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:45:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
ar = (4*pi*(raio**3))/3
combo = (pi*(altura**2)*(3*raio-altura))/3
if(numero ==1):
	mensagem = ar
else:
	mensagem = ar - combo 
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:46:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
ar = (4*pi*(raio**3))/3
combo = (pi*(altura**2)*(3*raio-altura))/3
if(numero ==1):
	mensagem = ar
else:
	mensagem = ar - combo 
print(round(mensagem, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:46:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
ar = (4*pi*(raio**3))/3
combo = (pi*(altura**2)*(3*raio-altura))/3
if(numero ==1):
	mensagem = ar
else:
	mensagem = ar - combo 
print(round(mensagem, 4))
-- EXECUTION TIME:
0.173636
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:48:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
combustivel = (4*pi*(raio**3))/3
ar = (pi*(altura**2)*(3*raio-altura))/3
if(numero ==1):
	mensagem = ar
else:
	mensagem = combustivel - ar
print(round(mensagem, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:48:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite raio: "))
altura = float(input("digite altura: "))
numero = int(input("digite numero: "))
combustivel = (4*pi*(raio**3))/3
ar = (pi*(altura**2)*(3*raio-altura))/3
if(numero ==1):
	mensagem = ar
else:
	mensagem = combustivel - ar
print(round(mensagem, 4))
-- EXECUTION TIME:
0.155107
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
